--- a/style.css
+++ b/style.css
@@ -1,5 +1,49 @@
+header {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav a {
+  text-align: center;
+  background-color: turquoise;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+
+section#featured-property p {
+  display: block;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  height: auto;
+}
+
+section#details div {
+  float: left;
+  background-color: cornflowerblue;
+  text-align: center;
+  width: 25%;
+}
+
+
+
+
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
+
